tests/compile_failures/classes/named_path_values.stderr
error: named values are not supported
 --> tests/compile_failures/classes/named_path_values.rs:3:11
  |
3 | #[classes(named = 42)]
  |           ^^^^^^^^^^
